concept working with brunch

--- a/app/index.html
+++ b/app/index.html
@@ -7,5 +7,14 @@
     <h1>Hello World!</h1>
     We are using io.js <script>document.write(process.version)</script>
     and Electron <script>document.write(process.versions['electron'])</script>.
+    <br/>
+    <script>
+      var remote = require('remote');
+      var Client = remote.require('hangupsjs');
+      document.write('1');
+      document.write(new Client() + 'b');
+      document.write('2');
+    </script>
+    here
   </body>
 </html>
