move hell into trash

--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <meta charset="utf-8">
+    <title>Yakayak</title>
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
-    <br/>
-    <script>
-      var remote = require('remote');
-      var Client = remote.require('hangupsjs');
-      document.write('1');
-      document.write(new Client() + 'b');
-      document.write('2');
-    </script>
-    here
+    <script src="ui/app.js"></script>
   </body>
 </html>
