adjusted paths for layout

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Yakayak</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
-    <script src="ui/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
