yakyak nothing else

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Yakayak</title>
+    <title>Yakyak</title>
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
