rename Yakyak to YakYak. fixes #71

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Yakyak</title>
+    <title>YakYak</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="css/fontello/css/fontello.css">
     <link rel="stylesheet" href="css/fontello/css/animation.css">
