--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>YakYak</title>
     <link rel="stylesheet" href="app.css">
+      <link rel="stylesheet" href="dark-theme.css">
     <link rel="stylesheet" href="css/fontello/css/fontello.css">
     <link rel="stylesheet" href="css/fontello/css/animation.css">
   </head>
