--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -32,7 +32,7 @@
       <h1>An error has occured</h1>
       <div>
         <p>If you are seeing this then an error has occured with YakYak.</p>
-        <p>To see what happened, <a href="javascript:void 0;" onclick="require('electron').remote.getCurrentWindow().webContents.openDevTools()">open the Inspector</a> and check if there is an error.</p>
+        <p>To see what happened, <a href="javascript:void 0;" onclick="require('electron').remote.getCurrentWindow().webContents.openDevTools()">open the Inspector</a> and check the messages in the console tab.</p>
         <p>Find if someone else is experiencing this by visiting
           <script>
             openIssues = function() {
