--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -41,7 +41,7 @@
           </script>
           <a href="javascript:void 0;" onclick="openIssues()">
             our issue tracker
-        </a> or create a new issue if you are the first <i>(please include a screenshot of the Inspector)</i>
+        </a> or create a new one if you are the first <i>(please include a screenshot of the console tab in the Inspector)</i>
         </p>
         <p>Sorry for this.</p>
         <p><i>&nbsp; YakYak team and community</i></p>
