--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -15,9 +15,19 @@
             margin: auto;
             padding-top: 3em;
         }
-        #main-error p {
+        #main-error p,
+        #main-error h3 {
             padding-top: 1em;
             padding-left: 110px;
+        }
+        #main-error h1,
+        #main-error h3 {
+            font-weight: 100;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+        }
+        #main-error .small {
+            font-size: .9em;
         }
         #main-error h1 {
             margin-bottom: 0px;
@@ -34,7 +44,8 @@
           <div>
             <p>If you are seeing this then an error has occured with YakYak.</p>
             <p>To see what happened, <a href="javascript:void 0;" onclick="require('electron').remote.getCurrentWindow().webContents.openDevTools()">open the Inspector</a> and check the messages in the console tab.</p>
-            <p>Find if someone else is experiencing this by visiting
+            <h3>How to report</h3>
+            <p>Find if this error has already been reported at
               <script>
                 openIssues = function() {
                     require('electron').shell.openExternal("https://github.com/yakyak/yakyak/issues");
@@ -42,7 +53,7 @@
               </script>
               <a href="javascript:void 0;" onclick="openIssues()">
                 our issue tracker
-            </a> or create a new one if you are the first <i>(please include a screenshot of the console tab in the Inspector)</i>
+            </a> and join the discussion, or create a new one if you are the first. <i class="small">(please include a screenshot of the console tab in the Inspector)</i>
             </p>
             <p>Sorry for this.</p>
             <p><i>&nbsp; YakYak team and community</i></p>
