--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -53,7 +53,7 @@
               </script>
               <a href="javascript:void 0;" onclick="openIssues()">
                 our issue tracker
-            </a> and join the discussion, or create a new one if you are the first. <i class="small">(please include a screenshot of the console tab in the Inspector)</i>
+            </a> and join the discussion, or create a new one if you are the first <i class="small">(please include a screenshot of the console tab in the Inspector)</i>.
             </p>
             <p>Sorry for this.</p>
             <p><i>&nbsp; YakYak team and community</i></p>
