--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script src="app.js"></script>
-    <div>
+    <div id='error-b4-app'>
         <style TYPE="text/css">
         <!--
         #main-error {
