color emoji in progress

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-    <script src="app.js"></script>
+    <script src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.5"></script>
+	<script src="app.js"></script>
     <div id='error-b4-app'>
         <style TYPE="text/css">
         <!--
