using emojiOne emoji set

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.5"></script>
+	<script src="https://cdn.jsdelivr.net/npm/emojione@3.1.2/lib/js/emojione.min.js"></script>
 	<script src="app.js"></script>
     <div id='error-b4-app'>
         <style TYPE="text/css">
